--- a/classements/promotion.html
+++ b/classements/promotion.html
@@ -42,7 +42,7 @@
 </head>
 
 <body>
-    <header id="nav-menu" style="padding: 0.5rem; margin: 0 auto; max-width: 1300px;" aria-label="navigation bar">
+    <header id="nav-menu" style="padding: 0.5rem; margin: 0 auto;" aria-label="navigation bar">
         <div class="container">
             <a class="logo" href="https://bdsiutsn.fr">
                 <img src="../img/bds-logo-shark.png" width="60" height="60" alt="Inc Logo" />
@@ -110,7 +110,7 @@
         <h1><a href="https://bdsiutsn.fr" style="color: #292c2f;">Retour à l'Accueil</a></h1>
     </main>
 
-    <footer class="footer-distributed" style="padding: 1.5rem; margin: 0 auto; max-width: 1300px;">
+    <footer class="footer-distributed" style="padding: 0.5rem; margin: 0 auto;">
         <div class="footer-right">
             <a href="mailto:bds.iutsn.contact@gmail.com" target=”_blank”><i class="fa fa-envelope"></i></a>
             <a href="/social/instagram" target=”_blank”><i class="fa fa-instagram"></i></a>
