--- a/evenements/inscription.html
+++ b/evenements/inscription.html
@@ -39,7 +39,7 @@
 
 
 <body>
-    <header id="nav-menu"  style="padding: 0.5rem; margin: 0 auto; max-width: 1300px;" aria-label="navigation bar">
+    <header id="nav-menu"  style="padding: 0.5rem; margin: 0 auto;" aria-label="navigation bar">
         <div class="container">
             <a class="logo" href="/">
                 <img src="../img/bds-logo-shark.png" width="60" height="60" alt="Inc Logo" />
@@ -143,7 +143,7 @@
         </div>
     </main>
 
-    <footer class="footer-distributed" style="padding: 1.5rem; margin: 0 auto; max-width: 1300px;">
+    <footer class="footer-distributed" style="padding: 0.5rem; margin: 0 auto;">
         <div class="footer-right">
             <a href="mailto:bds.iutsn.contact@gmail.com" target=”_blank”><i class="fa fa-envelope"></i></a>
             <a href="/social/instagram" target=”_blank”><i class="fa fa-instagram"></i></a>
