--- a/classements/promotion.html
+++ b/classements/promotion.html
@@ -110,7 +110,7 @@
         <h1><a href="https://bdsiutsn.fr" style="color: #292c2f;">Retour à l'Accueil</a></h1>
     </main>
 
-    <footer class="footer-distributed" style="padding: 0.5rem; margin: 0 auto;">
+    <footer class="footer-distributed" style="padding: 2rem; margin: 0 auto; max-width: 1300px;">
         <div class="footer-right">
             <a href="mailto:bds.iutsn.contact@gmail.com" target=”_blank”><i class="fa fa-envelope"></i></a>
             <a href="/social/instagram" target=”_blank”><i class="fa fa-instagram"></i></a>
