--- a/success.html
+++ b/success.html
@@ -116,7 +116,7 @@
         </div>
     </main>
 
-    <footer class="footer-distributed" style="padding: 0.5rem; margin: 0 auto;">
+    <footer class="footer-distributed" style="padding: 2rem; margin: 0 auto; max-width: 1300px;">
         <div class="footer-right">
             <a href="mailto:bds.iutsn.contact@gmail.com" target=”_blank”><i class="fa fa-envelope"></i></a>
             <a href="/social/instagram" target=”_blank”><i class="fa fa-instagram"></i></a>
